--- a/src/index.css
+++ b/src/index.css
@@ -1,13 +1,87 @@
-body {
+@import url("https://fonts.googleapis.com/css2?family=Raleway:wght@300;400;500;600&display=swap");
+
+* {
   margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
-    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
-    sans-serif;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
+  padding: 0;
+  box-sizing: border-box;
 }
 
-code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
-    monospace;
+main {
+  background-color: whitesmoke;
+  width: 1440px;
+  height: 1513px;
+}
+
+nav {
+  width: 1440px;
+  height: 80px;
+  display: flex;
+  justify-content: space-between;
+  font-weight: 500;
+  font-family: "Raleway", sans-serif;
+}
+
+nav ul {
+  display: flex;
+  list-style: none;
+  font-size: 16px;
+  padding: 28px 0 32px 117px;
+}
+
+nav li {
+  margin: 0 32px;
+}
+
+nav a {
+  text-decoration: none;
+  color: black;
+}
+
+nav a:hover {
+  color: green;
+}
+
+.logo-box {
+  width: 32px;
+  height: 28px;
+  margin: 30px 0 20px 0;
+}
+
+.logo-arrow {
+  width: 14px;
+  height: 9px;
+  position: relative;
+  bottom: 28px;
+  right: 23px;
+}
+
+.controls {
+  display: flex;
+  font-size: 18px;
+  padding: 34px 101px 32px 0;
+}
+
+.currency-selector .arrow {
+  margin-left: 5px;
+  padding-bottom: 2px;
+}
+
+.full-cart {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  margin-left: 5px;
+  padding-bottom: 6px;
+}
+
+.cart {
+  margin-left: 22px;
+  position: relative;
+  top: 16.4px;
+  right: 12px;
+}
+
+.wheels img {
+  margin-left: 2px;
 }
