--- a/src/index.css
+++ b/src/index.css
@@ -40,7 +40,7 @@ nav a {
 }
 
 nav a:hover {
-  color: green;
+  color: #5ece7b;
 }
 
 .logo-box {
@@ -118,6 +118,7 @@ nav a:hover {
   justify-content: center;
   align-items: center;
   cursor: pointer;
+  overflow: hidden;
 }
 
 .product-card:hover {
@@ -148,8 +149,42 @@ nav a:hover {
 }
 
 .add-cart-btn {
-  width: 100px;
-  height: 100px;
+  width: 50px;
+  height: 50px;
   border-radius: 50%;
-  background-color: green;
+  background-color: #5ece7b;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  flex-direction: column;
+  position: absolute;
+  margin: 0 -260px -250px 0;
+}
+
+.add-cart {
+  width: 24px;
+  height: 16px;
+  margin: 0 0 0 -5px;
+}
+
+.add-wheels img {
+  height: 5px;
+  width: 5px;
+}
+
+.add-wheels {
+  display: flex;
+  justify-content: space-around;
+  width: 15px;
+  align-items: center;
+}
+
+.out-of-stock {
+  position: absolute;
+  font-family: "Raleway", sans-serif;
+  font-weight: 400;
+  width: 173px;
+  font-size: 24px;
+  margin: -20px -10px 0 0;
+  color: #8d8f9a;
 }
