--- a/src/index.css
+++ b/src/index.css
@@ -7,7 +7,7 @@
 }
 
 main {
-  background-color: whitesmoke;
+  background-color: white;
   width: 1440px;
   height: 1800px;
 }
@@ -27,7 +27,7 @@ nav ul {
   display: flex;
   list-style: none;
   font-size: 16px;
-  padding: 28px 0 32px 55px;
+  padding: 28px 0 32px 65px;
 }
 
 nav li {
@@ -43,10 +43,59 @@ nav a:hover {
   color: #5ece7b;
 }
 
+a::after {
+  content: "";
+  position: absolute;
+  bottom: -20px;
+  left: -24%;
+  width: 150%;
+  height: 0.08em;
+  background-color: #5ece7b;
+  opacity: 0;
+  transition: opacity 300ms, transform 300ms;
+}
+
+a:hover::after,
+a:focus::after {
+  opacity: 1;
+  transform: translate3d(0, 0.2em, 0);
+}
+
+li a {
+  color: inherit;
+  text-decoration: none;
+}
+
+nav li:hover {
+  color: black;
+  font-weight: 400;
+}
+
+li a {
+  display: block;
+  position: relative;
+  padding: 0.2em 0;
+}
+
+li a::after {
+  opacity: 1;
+  transform: scale(0);
+  transform-origin: center;
+}
+
+li a:hover::after,
+li a:focus::after {
+  transform: scale(1);
+}
+
+li a:active {
+  color: rgb(21, 153, 197);
+}
+
 .logo-box {
   width: 32px;
   height: 28px;
-  margin: 30px 0 20px -120px;
+  margin: 30px 0 20px -125px;
 }
 
 .logo-arrow {
@@ -95,6 +144,14 @@ nav a:hover {
 }
 
 /*********************** CATEGORY PAGE *************************/
+
+.category-name {
+  font-family: "Raleway", sans-serif;
+  font-weight: 400;
+  font-size: 42px;
+  color: #1d1f22;
+  margin: 50px 0 25px 80px;
+}
 
 .products-section {
   width: 1440px;
