--- a/src/index.css
+++ b/src/index.css
@@ -1,4 +1,4 @@
-@import url("https://fonts.googleapis.com/css2?family=Raleway:wght@300;400;500;600&family=Roboto:wght@700&display=swap");
+@import url("https://fonts.googleapis.com/css2?family=Raleway:wght@300;400;500;600&family=Roboto:wght@500;700&family=Source+Sans+Pro:wght@300;400&display=swap");
 
 * {
   margin: 0;
@@ -165,16 +165,177 @@ li a:active {
 }
 /*********************** MINI CART *************************/
 
-.sm-grey-overlay {
-  opacity: 0.5;
-  background-color: lightgrey;
-  height: 58px;
-  margin-top: -8px;
+.mini-cart {
+  width: 325px;
+  height: 510px;
   position: absolute;
-  width: 1440px;
+  background-color: white;
+  margin-left: 1015px;
+  opacity: initial;
+  z-index: 1;
+  display: grid;
+  grid-auto-columns: 1fr;
+  grid-template-columns: 1fr;
+  grid-template-rows: 0.3fr 4.6fr 0.5fr 0.8fr;
+  gap: 1px 1px;
+  grid-template-areas:
+    "."
+    "."
+    "."
+    ".";
 }
 
-.lg-grey-overlay {
+.mini-cart h3 {
+  padding-top: 10px;
+  padding-left: 10px;
+  font-family: "Raleway", sans-serif;
+  font-weight: 400;
+  font-size: 17px;
+}
+
+.mini-cart span {
+  font-weight: 700;
+  font-size: 18px;
+}
+
+.mini-products {
+  overflow-y: scroll;
+}
+
+.mini-products::-webkit-scrollbar {
+  display: none;
+}
+
+.mini-product img {
+  width: 105px;
+  height: 137px;
+}
+
+.mini-product {
+  width: 325px;
+  height: 130px;
+  display: flex;
+  justify-content: space-around;
+  align-items: center;
+  margin-top: 30px;
+  margin-bottom: 50px;
+}
+
+.mini-description {
+  display: flex;
+  flex-direction: column;
+  justify-content: start;
+  height: 150px;
+  width: 120px;
+}
+
+.mini-details {
+  height: 115px;
+}
+
+.mini-name {
+  margin-top: 5px;
+  font-weight: 300;
+}
+
+.mini-price {
+  margin-top: 10px;
+  height: 50px;
+  font-weight: 500;
+}
+
+.mini-sizes {
+  display: flex;
+  width: 100%;
+  font-size: 14px;
+  font-weight: 400;
+  font-family: "Source Sans Pro", sans-serif;
+}
+
+.mini-size {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  border: 1px solid black;
+  width: 24px;
+  height: 24px;
+  margin: 0 8px 0 0;
+}
+
+.mini-name,
+.mini-price {
+  font-family: "Raleway", sans-serif;
+  font-size: 16px;
+  line-height: 25px;
+}
+
+.mini-controls {
+  display: grid;
+  grid-auto-columns: 1fr;
+  grid-template-columns: 1fr;
+  grid-template-rows: 0.5fr 3.5fr 0.5fr;
+  gap: 0px 1px;
+  grid-template-areas:
+    "."
+    "."
+    ".";
+}
+
+.mini-amount {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+
+.mini-add,
+.mini-subtract {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  border: 1px solid black;
+  width: 24px;
+  height: 24px;
+}
+
+.mini-total {
+  display: flex;
+  align-items: center;
+  width: 295px;
+  justify-content: space-between;
+  font-family: "Roboto", sans-serif;
+  font-weight: 500;
+  margin-left: 15px;
+}
+
+.mini-total span {
+  font-family: "Raleway", sans-serif;
+}
+
+.mini-btns {
+  display: flex;
+  justify-content: space-evenly;
+  align-items: center;
+}
+
+.mini-btns button {
+  width: 140px;
+  height: 43px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  font-family: "Raleway", sans-serif;
+  font-weight: 600;
+}
+
+.view-bag {
+  border: 1px solid black;
+  background-color: white;
+}
+
+.check-out {
+  background-color: #5ece7b;
+  color: white;
+  border: none;
 }
 
 /*********************** CATEGORY PAGE *************************/
@@ -185,6 +346,7 @@ li a:active {
   font-size: 42px;
   color: #1d1f22;
   margin: 50px 0 25px 80px;
+  padding-top: 58px;
 }
 
 .products-section {
