--- a/src/index.css
+++ b/src/index.css
@@ -118,11 +118,11 @@ li a:active {
   padding: 34px 101px 32px 0;
 }
 
-.currency-selector {
+.currency-selector-nav {
   cursor: pointer;
 }
 
-.currency-selector .arrow {
+.currency-selector-nav .arrow {
   margin-left: 5px;
   padding-bottom: 2px;
 }
@@ -163,6 +163,39 @@ li a:active {
   padding-bottom: 0px;
   margin: 0 0 5px 24px;
 }
+
+/*********************** CURRENCY SELECTOR *************************/
+
+.currency-selector {
+  width: 114px;
+  height: 169px;
+  display: grid;
+  grid-auto-columns: 1fr;
+  grid-template-columns: 1fr;
+  grid-template-rows: 1fr 1fr 1fr;
+  gap: 0px 1px;
+  grid-template-areas:
+    "."
+    "."
+    ".";
+  font-family: "Raleway", sans-serif;
+  font-size: 18px;
+  font-weight: 500;
+  position: absolute;
+  margin: 50px 0 0 1248px;
+}
+
+.currency-selector p {
+  margin: 20px 40px 0px 15px;
+}
+
+.usd:hover,
+.gbp:hover,
+.jpy:hover {
+  background-color: rgba(128, 128, 128, 0.185);
+  cursor: pointer;
+}
+
 /*********************** MINI CART *************************/
 
 .mini-cart {
