--- a/src/index.css
+++ b/src/index.css
@@ -371,13 +371,16 @@ li a:active {
   height: 115px;
 }
 
-.mini-name {
+.mini-brand {
   margin-top: 5px;
+}
+
+.mini-name {
   font-weight: 300;
 }
 
 .mini-price {
-  margin-top: 10px;
+  margin-top: 5px;
   height: 50px;
   font-weight: 500;
 }
@@ -405,6 +408,7 @@ li a:active {
   background-color: lightgrey;
 }
 
+.mini-brand,
 .mini-name,
 .mini-price {
   font-family: "Raleway", sans-serif;
@@ -504,10 +508,17 @@ li a:active {
 }
 
 .product-cards-container {
-  display: flex;
-  flex-wrap: wrap;
   width: 1300px;
   margin: auto;
+  display: grid;
+  grid-auto-columns: 1fr;
+  grid-template-columns: 1fr 1fr 1fr;
+  grid-template-rows: 1fr 1fr 1fr;
+  gap: 20px 1px;
+  grid-template-areas:
+    ". . ."
+    ". . ."
+    ". . .";
 }
 
 .product-card {
@@ -588,4 +599,19 @@ li a:active {
   font-size: 24px;
   margin: -20px -10px 0 0;
   color: #8d8f9a;
+}
+
+/*********************** CART PAGE *************************/
+
+.cart-page-section {
+  width: 1440px;
+  height: 745px;
+  display: flex;
+  margin: 50px 0 0 0;
+}
+
+.cart-page {
+  display: flex;
+  width: 1300px;
+  margin: auto;
 }
