--- a/src/index.css
+++ b/src/index.css
@@ -605,13 +605,28 @@ li a:active {
 
 .cart-page-section {
   width: 1440px;
-  height: 745px;
+  height: 1300px;
   display: flex;
+  flex-direction: column;
   margin: 50px 0 0 0;
 }
 
 .cart-page {
-  display: flex;
   width: 1300px;
   margin: auto;
+  display: grid;
+  grid-auto-columns: 1fr;
+  grid-template-columns: 1fr;
+  grid-template-rows: 1fr 1fr 1fr 1fr 1fr 1fr 1fr 1fr 1fr;
+  gap: 0px 1px;
+  grid-template-areas:
+    "."
+    "."
+    "."
+    "."
+    "."
+    "."
+    "."
+    "."
+    ".";
 }
