--- a/src/index.css
+++ b/src/index.css
@@ -554,6 +554,10 @@ li a:active {
   font-weight: 300;
 }
 
+.hover:hover {
+  color: #5ece7b;
+}
+
 .card-price {
   font-size: 18px;
   font-weight: 500;
@@ -727,4 +731,102 @@ li a:active {
 .gallery-left {
   margin-top: 80px;
   margin-left: 8px;
+}
+
+/*********************** PRODUCT PAGE *************************/
+
+.product-page-section {
+  width: 1440px;
+  display: flex;
+  flex-direction: column;
+  margin: 50px 0 50px 0;
+}
+
+.product-page-container {
+  padding-top: 50px;
+  display: grid;
+  width: 1250px;
+  margin: auto;
+  grid-auto-columns: 1fr;
+  grid-template-columns: 0.5fr 1.3fr 1.2fr;
+  grid-template-rows: 1fr;
+  gap: 0px 20px;
+  grid-template-areas: ". . .";
+}
+
+.product-gallery {
+  height: 520px;
+  overflow-y: scroll;
+  scroll-snap-type: y mandatory;
+}
+
+.product-gallery::-webkit-scrollbar {
+  display: none;
+}
+
+.product-gallery img {
+  width: 110px;
+  height: 110px;
+  margin-bottom: 20px;
+  scroll-snap-align: start;
+  cursor: pointer;
+}
+
+.main-img {
+  display: flex;
+  position: relative;
+  left: 0px;
+  height: 520px;
+}
+
+.product-brand {
+  font-family: "Raleway", sans-serif;
+  font-weight: 600;
+  font-size: 30px;
+  margin-bottom: -14px;
+}
+
+.product-name {
+  font-family: "Raleway", sans-serif;
+  font-weight: 400;
+  font-size: 30px;
+  margin-bottom: 43px;
+}
+
+.product-sub-title {
+  font-family: "Roboto", sans-serif;
+  font-weight: 700;
+  font-size: 18px;
+  margin-top: 40px;
+}
+
+.product-size-label {
+  margin-bottom: -20px;
+}
+
+.product-price {
+  font-family: "Raleway", sans-serif;
+  font-weight: 700;
+  font-size: 24px;
+  margin-top: 15px;
+  margin-bottom: 25px;
+}
+
+.product-page-add-button {
+  width: 292px;
+  height: 52px;
+  background-color: #5ece7b;
+  color: white;
+  border: none;
+  margin-bottom: 40px;
+  cursor: pointer;
+}
+
+.product-page-description {
+  width: 292px;
+  height: 103px;
+  font-size: 16px;
+  font-family: "Roboto", sans-serif;
+  font-weight: 400;
+  line-height: 25.93px;
 }
