--- a/src/index.css
+++ b/src/index.css
@@ -218,6 +218,10 @@ li a:active {
     ".";
 }
 
+.hide {
+  display: none;
+}
+
 .mini-cart {
   transition: 1s;
   left: 0;
@@ -386,7 +390,19 @@ li a:active {
 
 .mini-sizes {
   display: flex;
-  width: 100%;
+  font-size: 14px;
+  font-weight: 400;
+  font-family: "Source Sans Pro", sans-serif;
+  overflow-y: scroll;
+}
+
+.mini-sizes::-webkit-scrollbar {
+  display: none;
+}
+
+.sizes-scroll {
+  display: flex;
+  max-width: 160%;
   font-size: 14px;
   font-weight: 400;
   font-family: "Source Sans Pro", sans-serif;
@@ -397,9 +413,11 @@ li a:active {
   justify-content: center;
   align-items: center;
   border: 1px solid black;
-  width: 24px;
+  min-width: 24px;
   height: 24px;
   margin: 0 8px 0 0;
+  padding: 0 5px;
+  white-space: nowrap;
 }
 
 .unavailable {
