--- a/src/index.css
+++ b/src/index.css
@@ -390,6 +390,7 @@ li a:active {
 
 .mini-sizes {
   display: flex;
+  min-width: 110%;
   font-size: 14px;
   font-weight: 400;
   font-family: "Source Sans Pro", sans-serif;
