--- a/src/index.css
+++ b/src/index.css
@@ -395,6 +395,7 @@ li a:active {
   font-weight: 400;
   font-family: "Source Sans Pro", sans-serif;
   overflow-y: scroll;
+  margin-top: 2px;
 }
 
 .mini-sizes::-webkit-scrollbar {
@@ -555,10 +556,17 @@ li a:active {
   box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
 }
 
-.card-img {
+.card-img-container {
+  display: flex;
+  justify-content: center;
+  align-items: center;
   width: 356px;
   height: 338px;
   margin: -10px 15px 20px 15px;
+}
+
+.card-img {
+  height: 338px;
 }
 
 .product-card p {
@@ -692,7 +700,6 @@ li a:active {
 
 .product-att-container {
   overflow: visible;
-  width: 100%;
 }
 
 .dark {
@@ -795,12 +802,19 @@ li a:active {
   display: none;
 }
 
-.product-gallery img {
+.gallery-img-container {
+  display: flex;
+  justify-content: center;
+  align-items: center;
   width: 110px;
   height: 110px;
   margin-bottom: 20px;
   scroll-snap-align: start;
   cursor: pointer;
+}
+
+.product-gallery img {
+  height: 110px;
 }
 
 .main-img {
