Product page componet added and all components except data component have been refactored to class components

--- a/src/index.css
+++ b/src/index.css
@@ -704,8 +704,8 @@ li a:active {
 }
 
 .dark {
-  background-color: black;
-  color: white;
+  background-color: black !important;
+  color: whitesmoke !important;
   width: 63px;
   height: 45px;
   cursor: pointer;
