--- a/src/index.css
+++ b/src/index.css
@@ -171,25 +171,29 @@ li a:active {
   display: grid;
   grid-auto-columns: 1fr;
   grid-template-columns: 1fr;
-  grid-template-rows: 1fr 1fr 1fr;
+  grid-template-rows: 1fr 1fr 1fr 1fr 1fr;
   gap: 0px 1px;
   grid-template-areas:
     "."
     "."
+    "."
+    "."
     ".";
   font-family: "Raleway", sans-serif;
-  font-size: 18px;
+  font-size: 16px;
   font-weight: 500;
   position: absolute;
   margin: 50px 0 0 1248px;
 }
 
 .currency-selector p {
-  margin: 20px 40px 0px 15px;
+  margin: 10px 40px 0 15px;
 }
 
 .usd:hover,
 .gbp:hover,
+.aud:hover,
+.rub:hover,
 .jpy:hover {
   background-color: rgba(128, 128, 128, 0.185);
   cursor: pointer;
